--- a/OurStoryWedworks.css
+++ b/OurStoryWedworks.css
@@ -62,7 +62,7 @@ h2{
 	.hero .hero-content{padding-top:40%}
 	.hero .hero-content img{width:55%;margin-bottom:12%}
 	.navigation{transition:all 300ms ease-in-out;position:fixed;width:100%;z-index:999}
-	.fixed{position:fixed;background-color:black;z-index:999;width:100%}
+	.fixed{position:fixed;background-color:#e8ca6f;z-index:999;width:100%}
 	header{padding:50px 0;border-bottom:solid 1px rgba(255,255,255,0.2);position:relative;width:1170px;margin:0 auto;transition:padding 300ms ease-in-out}
 	header a{color:#fff;text-transform:uppercase;font-size:13px}
 	header a.login{margin-right:20px}
